--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,7 +100,7 @@ jobs:
 
 
   # ============================================================
-  # 2) no_std job: detection (Nu) + compile (core & alloc) in pure Nushell
+  # 2) no_std job: detect (Nu) + compile (core & alloc) in pure Nushell
   # ============================================================
   no-std:
     name: no_std (Nu detect core/alloc → build)
@@ -151,9 +151,9 @@ jobs:
           let TARGET_BARE = "x86_64-unknown-none"
           let meta     = (cargo metadata --no-deps --format-version=1 | from json)
           let members  = $meta.workspace_members
-            
-          # Select workspace packages by id, then require at least one *library-like* target
-          let lib_kinds = [lib rlib staticlib cdylib dylib]
+          let lib_kinds = [lib rlib staticlib cdylib dylib]  # accept any library-like target
+
+          # Workspace packages by id, requiring at least one library-like target
           let pkgs = (
             $meta.packages
             | where {|p| $members | any {|m| $m == $p.id } }
@@ -167,36 +167,34 @@ jobs:
             | get name
             | uniq
           )
-            
-          if ($pkgs | is-empty) {
-            # Expose empty outputs so downstream steps don’t crash, but fail the job for visibility
-            $"TARGET_BARE=($TARGET_BARE)"            | save --append $env.GITHUB_OUTPUT
-            $"PKG_LIST=[]"                           | save --append $env.GITHUB_OUTPUT
-            $"CORE_MATRIX=[]"                        | save --append $env.GITHUB_OUTPUT
-            print "No library packages found in workspace. Aborting no_std flow."
-            exit 1
-          }
-            
-          # Build core args per package: --no-default-features + all non-[default,std,alloc] features
+
+          print "== no_std candidates (lib targets) =="
+          ($pkgs | each {|n| print $"- ($n)"} | ignore)
+
+          # Build core args per package, tolerating missing [features]
           let core_matrix = (
             $pkgs | each {|name|
               let pkg        = ($meta.packages | where name == $name | first)
-              let feat_cols  = ($pkg.features | columns)
-              let extra      = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
-              let args       = if ($extra | is-empty) { "--no-default-features" } else { $"--no-default-features --features ($extra)" }
+              let feat_map   = ($pkg.features? | default {})   # <- tolerate missing features
+              let feat_cols  = ($feat_map | columns)
+              let extra      = (
+                $feat_cols
+                | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
+                | str join ","
+              )
+              let args = if ($extra | is-empty) {
+                "--no-default-features"
+              } else {
+                $"--no-default-features --features ($extra)"
+              }
               { pkg: $name, args: $args }
             }
           )
-            
-          # Outputs (single line JSON via --raw)
-          $"TARGET_BARE=($TARGET_BARE)"                  | save --append $env.GITHUB_OUTPUT
+
+          # Outputs (compact, one line)
+          $"TARGET_BARE=($TARGET_BARE)"                   | save --append $env.GITHUB_OUTPUT
           $"PKG_LIST=($pkgs | to json --raw)"            | save --append $env.GITHUB_OUTPUT
           $"CORE_MATRIX=($core_matrix | to json --raw)"  | save --append $env.GITHUB_OUTPUT
-            
-          # Optional: log what we found (human friendly)
-          print "== no_std candidates (lib targets) =="
-          $pkgs | each {|n| print $"- ($n)"}
-            
 
       # --------------------------
       # Step: detect-alloc (Nu)
@@ -209,21 +207,26 @@ jobs:
         env:
           PKG_LIST: ${{ steps.detect-nostd.outputs.PKG_LIST }}
         run: |
-          let meta = (cargo metadata --no-deps --format-version=1 | from json)
-          let pkgs = (($env.PKG_LIST? | default "[]") | from json)
-
+          let meta  = (cargo metadata --no-deps --format-version=1 | from json)
+          let pkgs  = (($env.PKG_LIST? | default "[]") | from json)
+        
           if ($pkgs | is-empty) {
             $"ALLOC_MATRIX=[]" | save --append $env.GITHUB_OUTPUT
             exit 0
           }
-
+        
           let alloc_matrix = (
             $pkgs
             | each {|name|
-                let pkg = ($meta.packages | where name == $name | first)
-                let feat_cols = ($pkg.features | columns)
+                let pkg       = ($meta.packages | where name == $name | first)
+                let feat_map  = ($pkg.features? | default {})  # <- tolerate missing features
+                let feat_cols = ($feat_map | columns)
                 if ($feat_cols | any {|f| $f == "alloc"}) {
-                  let extra = ($feat_cols | where {|f| $f != "default" and $f != "std" and $f != "alloc"} | str join ",")
+                  let extra = (
+                    $feat_cols
+                    | where {|f| $f != "default" and $f != "std" and $f != "alloc"}
+                    | str join ","
+                  )
                   let args = if ($extra | is-empty) {
                     "--no-default-features --features alloc"
                   } else {
@@ -234,8 +237,25 @@ jobs:
               }
             | compact
           )
-
+        
           $"ALLOC_MATRIX=($alloc_matrix | to json --raw)" | save --append $env.GITHUB_OUTPUT
+
+      # --------------------------
+      # Optional: debug matrices (useful if something looks empty)
+      # --------------------------
+      - name: Debug matrices (Nu)
+        if: always()
+        shell: nu {0}
+        env:
+          CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
+          ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
+        run: |
+          print "CORE_MATRIX:"
+          let core_raw = ($env.CORE_MATRIX? | default "")
+          if ($core_raw | is-empty) { print "(empty)" } else { ($core_raw | from json) | table }
+          print "ALLOC_MATRIX:"
+          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
+          if ($alloc_raw | is-empty) { print "(empty)" } else { ($alloc_raw | from json) | table }
 
       # --------------------------
       # Build: no_std (Nu) — check + build for core & alloc
@@ -247,14 +267,18 @@ jobs:
           CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
           ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
-          let TARGET = $env.TARGET_BARE
-          let core   = (($env.CORE_MATRIX?  | default "[]") | from json)
-          let alloc  = (($env.ALLOC_MATRIX? | default "[]") | from json)
-          let final  = ($core | append $alloc)
+          let TARGET    = $env.TARGET_BARE
+
+          let core_raw  = ($env.CORE_MATRIX?  | default "")
+          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
+
+          let core  = (if ($core_raw  | is-empty) { [] } else { $core_raw  | from json })
+          let alloc = (if ($alloc_raw | is-empty) { [] } else { $alloc_raw | from json })
+          let final = ($core | append $alloc)
 
           if ($final | is-empty) {
-            print "No no_std packages detected. Skipping."
-            exit 0
+            print "No no_std packages detected (final)."
+            exit 1
           }
 
           for row in $final {
@@ -271,15 +295,14 @@ jobs:
           CORE_MATRIX:  ${{ steps.detect-nostd.outputs.CORE_MATRIX }}
           ALLOC_MATRIX: ${{ steps.detect-alloc.outputs.ALLOC_MATRIX }}
         run: |
-          let TARGET = $env.TARGET_BARE
-          let core   = (($env.CORE_MATRIX?  | default "[]") | from json)
-          let alloc  = (($env.ALLOC_MATRIX? | default "[]") | from json)
-          let final  = ($core | append $alloc)
+          let TARGET    = $env.TARGET_BARE
 
-          if ($final | is-empty) {
-            print "No no_std packages detected. Skipping."
-            exit 0
-          }
+          let core_raw  = ($env.CORE_MATRIX?  | default "")
+          let alloc_raw = ($env.ALLOC_MATRIX? | default "")
+
+          let core  = (if ($core_raw  | is-empty) { [] } else { $core_raw  | from json })
+          let alloc = (if ($alloc_raw | is-empty) { [] } else { $alloc_raw | from json })
+          let final = ($core | append $alloc)
 
           for row in $final {
             let pkg  = $row.pkg
